Created squelette module project

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,16 @@
 *.tar.gz
 *.rar
 
+HELP.md
+.classpath
+.project
+.settings
+target
+bin
+.mvn
+*.class
+*.lst
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
